--- a/examples/aws/APIGateway/apigw-rest-stepfunction/package.json
+++ b/examples/aws/APIGateway/apigw-rest-stepfunction/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-api-gateway": "3.332.0",
     "@aws-sdk/client-lambda": "3.332.0",
+    "@aws-sdk/client-sfn": "3.332.0",
     "@aws-sdk/client-sns": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
