--- a/examples/aws/GlobalAccelerator/global-accelerator-loadbalancer/package.json
+++ b/examples/aws/GlobalAccelerator/global-accelerator-loadbalancer/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-ec2": "3.332.0",
     "@aws-sdk/client-elastic-load-balancing-v2": "3.332.0",
+    "@aws-sdk/client-global-accelerator": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
     "rubico": "1.9.6"
