--- a/examples/aws/OpenSearch/opensearch-simple/package.json
+++ b/examples/aws/OpenSearch/opensearch-simple/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-opensearch": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
     "rubico": "1.9.6"
