--- a/examples/aws/Pipes/eventbridge-pipes-sqs-to-stepfunctions/package.json
+++ b/examples/aws/Pipes/eventbridge-pipes-sqs-to-stepfunctions/package.json
@@ -24,8 +24,9 @@
     "@aws-sdk/client-dynamodb": "3.332.0",
     "@aws-sdk/client-lambda": "3.332.0",
     "@aws-sdk/client-pipes": "3.332.0",
-    "@aws-sdk/client-sns": "3.332.0",
     "@aws-sdk/client-sqs": "3.332.0",
+    "@aws-sdk/client-sfn": "3.332.0",
+    "@aws-sdk/client-sns": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
     "rubico": "1.9.6"
