--- a/examples/aws/Route53RecoveryReadiness/route53-recovery-readiness/package.json
+++ b/examples/aws/Route53RecoveryReadiness/route53-recovery-readiness/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.332.0",
+    "@aws-sdk/client-route53-recovery-readiness": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
     "rubico": "1.9.6"
