--- a/examples/aws/SQS/sqs_fargate_cdk_python/package.json
+++ b/examples/aws/SQS/sqs_fargate_cdk_python/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/client-ec2": "3.332.0",
     "@aws-sdk/client-ecr": "3.332.0",
     "@aws-sdk/client-sqs": "3.332.0",
+    "@aws-sdk/client-application-autoscaling": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
     "rubico": "1.9.6"
