--- a/examples/aws/SSM/maintenance-task-stepfunction/package.json
+++ b/examples/aws/SSM/maintenance-task-stepfunction/package.json
@@ -20,8 +20,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-sns": "3.332.0",
     "@aws-sdk/client-ssm": "3.332.0",
+    "@aws-sdk/client-sfn": "3.332.0",
+    "@aws-sdk/client-sns": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
     "rubico": "1.9.6"
