--- a/examples/aws/Scheduler/eventbridge-schedule-to-step-function-cdk-python/package.json
+++ b/examples/aws/Scheduler/eventbridge-schedule-to-step-function-cdk-python/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-cloudwatch-logs": "3.332.0",
     "@aws-sdk/client-lambda": "3.332.0",
     "@aws-sdk/client-scheduler": "3.332.0",
+    "@aws-sdk/client-sfn": "3.332.0",
     "@aws-sdk/client-sns": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
