--- a/examples/aws/StepFunctions/s3-eventbridge-sfn/package.json
+++ b/examples/aws/StepFunctions/s3-eventbridge-sfn/package.json
@@ -20,10 +20,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-cloudwatch": "3.332.0",
     "@aws-sdk/client-cloudwatch-logs": "3.332.0",
+    "@aws-sdk/client-cloudwatch": "3.332.0",
     "@aws-sdk/client-lambda": "3.332.0",
     "@aws-sdk/client-s3": "3.332.0",
+    "@aws-sdk/client-sfn": "3.332.0",
     "@aws-sdk/client-sns": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
