--- a/examples/aws/StepFunctions/sfn-dynamodb/package.json
+++ b/examples/aws/StepFunctions/sfn-dynamodb/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.332.0",
+    "@aws-sdk/client-sfn": "3.332.0",
     "@aws-sdk/client-sns": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
