--- a/examples/aws/StepFunctions/sfn-eventbridge/package.json
+++ b/examples/aws/StepFunctions/sfn-eventbridge/package.json
@@ -23,6 +23,7 @@
     "@aws-sdk/client-cloudwatch": "3.332.0",
     "@aws-sdk/client-cloudwatch-logs": "3.332.0",
     "@aws-sdk/client-dynamodb": "3.332.0",
+    "@aws-sdk/client-sfn": "3.332.0",
     "@aws-sdk/client-sns": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
