--- a/examples/aws/VpcLattice/vpc-lattice-cousous/package.json
+++ b/examples/aws/VpcLattice/vpc-lattice-cousous/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-ecr": "3.332.0",
     "@aws-sdk/client-elastic-load-balancing-v2": "3.332.0",
     "@aws-sdk/client-lambda": "3.332.0",
+    "@aws-sdk/client-vpc-lattice": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
     "rubico": "1.9.6"
