--- a/examples/aws/aws-samples/aws-route53-recovery-control-config/package.json
+++ b/examples/aws/aws-samples/aws-route53-recovery-control-config/package.json
@@ -25,12 +25,13 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-auto-scaling": "3.332.0",
+    "@aws-sdk/client-dynamodb": "3.332.0",
     "@aws-sdk/client-codebuild": "3.332.0",
     "@aws-sdk/client-codedeploy": "3.332.0",
-    "@aws-sdk/client-dynamodb": "3.332.0",
     "@aws-sdk/client-ec2": "3.332.0",
     "@aws-sdk/client-route-53": "3.332.0",
     "@aws-sdk/client-route53-recovery-control-config": "3.332.0",
+    "@aws-sdk/client-route53-recovery-readiness": "3.332.0",
     "@aws-sdk/client-s3": "3.332.0",
     "@grucloud/core": "^13.0.6-alpha.0",
     "@grucloud/provider-aws": "^13.0.6-alpha.0",
