--- a/packages/core/template/aws/package.json
+++ b/packages/core/template/aws/package.json
@@ -21,7 +21,6 @@
   "license": "ISC",
   "dependencies": {
     "@grucloud/core": "^13.0.9-alpha.0",
-    "@grucloud/provider-aws": "^13.0.12-alpha.0",
-    "rubico": "1.9.6"
+    "@grucloud/provider-aws": "^13.0.12-alpha.0"
   }
 }
