--- a/packages/core/template/aws/package.json
+++ b/packages/core/template/aws/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ec2": "3.332.0",
     "@grucloud/core": "^13.0.13-alpha.0",
     "@grucloud/provider-aws": "^13.0.15-alpha.0"
   }
