--- a/packages/tools/gc_ci_runner/package.json
+++ b/packages/tools/gc_ci_runner/package.json
@@ -32,6 +32,7 @@
     "@aws-sdk/client-s3": "3.332.0",
     "@aws-sdk/lib-storage": "3.451.0",
     "postgres": "3.3.5",
-    "rubico": "2.3.1"
+    "rubico": "2.3.1",
+    "ws": "8.14.2"
   }
 }
