--- a/packages/tools/gc_ci_runner/package.json
+++ b/packages/tools/gc_ci_runner/package.json
@@ -15,9 +15,9 @@
     "docker:tag": "docker tag grucloud/grucloud-cli public.ecr.aws/a4o9b2p8/grucloud/grucloud-cli:13.0.5",
     "docker:push": "docker push public.ecr.aws/a4o9b2p8/grucloud/grucloud-cli:13.0.5",
     "docker:login-demo": "aws ecr get-login-password --region us-east-1 --profile console-demo| docker login --username AWS --password-stdin 548529576214.dkr.ecr.us-east-1.amazonaws.com",
-    "docker:tag-demo": "docker tag grucloud/grucloud-cli 548529576214.dkr.ecr.us-east-1.amazonaws.com/grucloud-cli:13.0.13",
-    "docker:push-demo": "docker push 548529576214.dkr.ecr.us-east-1.amazonaws.com/grucloud-cli:13.0.13",
-    "docker:btp": "npm run docker:build && npm run docker:tag-demo && npm run docker:push-demo"
+    "docker:tag-demo": "docker tag grucloud/grucloud-cli 548529576214.dkr.ecr.us-east-1.amazonaws.com/grucloud-cli:13.0.14",
+    "docker:push-demo": "docker push 548529576214.dkr.ecr.us-east-1.amazonaws.com/grucloud-cli:13.0.14",
+    "docker:btp": "npm run docker:login-demo && npm run docker:login && npm run docker:build && npm run docker:tag-demo && npm run docker:push-demo"
   },
   "repository": {
     "type": "git",
